--- a/.github/workflows/build-ruoqi-sys-admin-docker.yml
+++ b/.github/workflows/build-ruoqi-sys-admin-docker.yml
@@ -2,365 +2,34 @@ name: Build and Push RuoQi Sys Admin
 
 on:
   push:
-    branches: [main]
-    paths:
-      - 'apps/ruoqi-sys-admin/**'
-      - 'scripts/ruoqi-sys-admin-build/**'
-      - 'package.json'
-      - 'pnpm-lock.yaml'
-      - 'pnpm-workspace.yaml'
-      - '.node-version'
-
-  # 添加手动触发选项
-  workflow_dispatch:
-    inputs:
-      version_tag:
-        description: '手动指定版本标签（可选，如：v1.2.3）'
-        required: false
-        type: string
+    branches:
+      - 'main'
 
 jobs:
-  build_and_push:
-    name: Build and Push Docker Image
+  docker_push:
+    if: startsWith(github.server_url, 'https://github.com')
+    name: Build and Push Application with Docker
     runs-on: ubuntu-latest
     env:
       DOCKER_HUB_USERNAME: ${{ secrets.DOCKER_HUB_USERNAME }}
       DOCKER_HUB_ACCESS_TOKEN: ${{ secrets.DOCKER_HUB_ACCESS_TOKEN }}
-      IMAGE_NAME: ruoqi-sys-admin
-      REGISTRY: docker.io
     steps:
-      # 1. 检出代码
-      - name: Checkout code
-        uses: actions/checkout@v4
-        with:
-          fetch-depth: 0
+      - uses: actions/checkout@v5
 
-      # 2. 设置 Node.js 和 pnpm
-      - name: Setup Node and pnpm
-        uses: ./.github/actions/setup-node
-
-      # 3. 准备构建环境
-      - name: Prepare build environment
+      - name: Build Docker image
         run: |
-          echo "=== 准备构建环境 ==="
+          ./scripts/rupqi-admin/docker_build.sh
 
-          # 检查必要的脚本文件
-          if [ ! -f "scripts/ruoqi-sys-admin-build/build.sh" ]; then
-            echo "❌ 未找到 build.sh 脚本"
-            exit 1
-          fi
+      - name: docker images
+        run: docker images
 
-          if [ ! -f "scripts/ruoqi-sys-admin-build/push.sh" ]; then
-            echo "❌ 未找到 push.sh 脚本"
-            exit 1
-          fi
-
-          # 设置脚本权限
-          cd scripts/ruoqi-sys-admin-build
-          chmod +x build.sh push.sh
-
-          # 创建必要的目录
-          mkdir -p logs
-
-          echo "✅ 环境准备完成"
-
-      # 4. 生成版本信息
-      - name: Generate version information
-        id: version
+      - name: Push Docker image
         run: |
-          echo "=== 生成版本信息 ==="
-          echo "触发事件: ${{ github.event_name }}"
-          echo "提交SHA: ${{ github.sha }}"
-          echo "分支: ${{ github.ref }}"
+          ./scripts/rupqi-admin/docker_push.sh
 
-          # 检查手动输入的版本标签
-          MANUAL_TAG="${{ github.event.inputs.version_tag }}"
-          if [ -n "${MANUAL_TAG}" ]; then
-            echo "使用手动指定的版本标签: ${MANUAL_TAG}"
-            echo "tag=${MANUAL_TAG}" >> $GITHUB_OUTPUT
-            echo "version=${MANUAL_TAG#v}" >> $GITHUB_OUTPUT  # 去掉 v 前缀
-            echo "manual_tag=true" >> $GITHUB_OUTPUT
-            exit 0
-          fi
-
-          # 从 package.json 获取版本
-          VERSION="1.0.0"
-          if [ -f "./apps/ruoqi-sys-admin/package.json" ]; then
-            VERSION=$(node -p "require('./apps/ruoqi-sys-admin/package.json').version || '1.0.0'" 2>/dev/null || echo "1.0.0")
-          fi
-
-          SHORT_SHA=${GITHUB_SHA::8}
-          DATE=$(date +'%Y%m%d')
-          TIMESTAMP=$(date +'%Y%m%d%H%M%S')
-
-          # 标签列表
-          TAG_LATEST="latest"
-          TAG_VERSION="v${VERSION}"
-          TAG_DATE_VERSION="v${VERSION}-${DATE}"
-          TAG_FULL="v${VERSION}-${DATE}-${SHORT_SHA}"
-          TAG_TIMESTAMP="v${VERSION}-${TIMESTAMP}-${SHORT_SHA}"
-
-          echo "🔖 生成的标签:"
-          echo "  - latest: ${TAG_LATEST}"
-          echo "  - 版本: ${TAG_VERSION}"
-          echo "  - 日期版本: ${TAG_DATE_VERSION}"
-          echo "  - 完整版本: ${TAG_FULL}"
-          echo "  - 时间戳版本: ${TAG_TIMESTAMP}"
-
-          echo "tag_latest=${TAG_LATEST}" >> $GITHUB_OUTPUT
-          echo "tag_version=${TAG_VERSION}" >> $GITHUB_OUTPUT
-          echo "tag_date_version=${TAG_DATE_VERSION}" >> $GITHUB_OUTPUT
-          echo "tag_full=${TAG_FULL}" >> $GITHUB_OUTPUT
-          echo "tag_timestamp=${TAG_TIMESTAMP}" >> $GITHUB_OUTPUT
-          echo "version=${VERSION}" >> $GITHUB_OUTPUT
-          echo "sha_short=${SHORT_SHA}" >> $GITHUB_OUTPUT
-          echo "date=${DATE}" >> $GITHUB_OUTPUT
-          echo "timestamp=${TIMESTAMP}" >> $GITHUB_OUTPUT
-          echo "manual_tag=false" >> $GITHUB_OUTPUT
-
-      # 5. 设置环境变量供脚本使用
-      - name: Set environment variables for scripts
-        run: |
-          echo "=== 设置环境变量 ==="
-
-          # 导出环境变量供 build.sh 和 push.sh 使用
-          echo "DOCKER_HUB_USERNAME=${{ secrets.DOCKER_HUB_USERNAME }}" >> $GITHUB_ENV
-          echo "IMAGE_VERSION=${{ steps.version.outputs.version }}" >> $GITHUB_ENV
-          echo "GIT_SHA_SHORT=${{ steps.version.outputs.sha_short }}" >> $GITHUB_ENV
-          echo "BUILD_DATE=${{ steps.version.outputs.date }}" >> $GITHUB_ENV
-
-          # 构建完整的镜像标签
-          FULL_IMAGE_TAG="${{ secrets.DOCKER_HUB_USERNAME }}/ruoqi-sys-admin:${{ steps.version.outputs.tag_full }}"
-          echo "FULL_IMAGE_TAG=${FULL_IMAGE_TAG}" >> $GITHUB_ENV
-
-          echo "✅ 环境变量设置完成"
-          echo "镜像标签: ${FULL_IMAGE_TAG}"
-
-      # 6. 登录到 Docker Registry
-      - name: Login to Docker Registry
-        if: env.DOCKER_HUB_USERNAME != '' && env.DOCKER_HUB_ACCESS_TOKEN != ''
-        run: |
-          echo "=== 登录到 Docker Hub ==="
-          echo ${{ secrets.DOCKER_HUB_ACCESS_TOKEN }} | docker login \
-            -u ${{ secrets.DOCKER_HUB_USERNAME }} \
-            --password-stdin
-          echo "✅ 登录成功"
-
-      # 7. 执行构建脚本
-      - name: Execute build script
-        id: build
-        run: |
-          echo "=== 执行构建脚本 ==="
-          cd scripts/ruoqi-sys-admin-build
-
-          # 记录开始时间
-          START_TIME=$(date +%s)
-
-          # 执行构建脚本
-          echo "执行命令: ./build.sh --no-run"
-          if ./build.sh --no-run; then
-            BUILD_STATUS="success"
-            echo "✅ 构建脚本执行成功"
-          else
-            BUILD_STATUS="failed"
-            echo "❌ 构建脚本执行失败"
-            exit 1
-          fi
-
-          # 记录结束时间
-          END_TIME=$(date +%s)
-          DURATION=$((END_TIME - START_TIME))
-
-          echo "构建耗时: ${DURATION}秒"
-          echo "build_status=${BUILD_STATUS}" >> $GITHUB_OUTPUT
-          echo "build_duration=${DURATION}" >> $GITHUB_OUTPUT
-
-      # 8. 验证 Docker 镜像
-      - name: Verify Docker image
-        run: |
-          echo "=== 验证 Docker 镜像 ==="
-
-          # 检查镜像是否存在
-          if docker images | grep -q "ruoqi-sys-admin"; then
-            echo "✅ 找到 ruoqi-sys-admin 镜像"
-            echo "镜像列表:"
-            docker images | head -20
-          else
-            echo "❌ 未找到 ruoqi-sys-admin 镜像"
-            exit 1
-          fi
-
-          # 显示镜像详细信息
-          echo "镜像详细信息:"
-          docker images --format "table {{.Repository}}\t{{.Tag}}\t{{.Size}}\t{{.CreatedAt}}" | grep ruoqi-sys-admin
-
-      # 9. 标记 Docker 镜像（多个标签）
-      - name: Tag Docker images
-        run: |
-          echo "=== 标记 Docker 镜像 ==="
-
-          # 获取镜像ID
-          IMAGE_ID=$(docker images -q ruoqi-sys-admin:latest)
-
-          if [ -z "$IMAGE_ID" ]; then
-            echo "❌ 未找到 ruoqi-sys-admin:latest 镜像"
-            exit 1
-          fi
-
-          echo "源镜像ID: ${IMAGE_ID}"
-
-          # 标记多个版本标签
-          TAGS=(
-            "${{ secrets.DOCKER_HUB_USERNAME }}/ruoqi-sys-admin:${{ steps.version.outputs.tag_latest }}"
-            "${{ secrets.DOCKER_HUB_USERNAME }}/ruoqi-sys-admin:${{ steps.version.outputs.tag_version }}"
-            "${{ secrets.DOCKER_HUB_USERNAME }}/ruoqi-sys-admin:${{ steps.version.outputs.tag_date_version }}"
-            "${{ secrets.DOCKER_HUB_USERNAME }}/ruoqi-sys-admin:${{ steps.version.outputs.tag_full }}"
-            "${{ secrets.DOCKER_HUB_USERNAME }}/ruoqi-sys-admin:${{ steps.version.outputs.tag_timestamp }}"
-          )
-
-          for TAG in "${TAGS[@]}"; do
-            echo "标记为: ${TAG}"
-            docker tag ${IMAGE_ID} ${TAG}
-          done
-
-          echo "✅ 镜像标记完成"
-          echo "当前所有 ruoqi-sys-admin 镜像:"
-          docker images | grep ruoqi-sys-admin
-
-      # 10. 执行推送脚本
-      - name: Execute push script
-        id: push
-        run: |
-          echo "=== 执行推送脚本 ==="
-          cd scripts/ruoqi-sys-admin-build
-
-          # 记录开始时间
-          START_TIME=$(date +%s)
-
-          # 设置环境变量供 push.sh 使用
-          export DOCKER_USERNAME="${{ secrets.DOCKER_HUB_USERNAME }}"
-          export IMAGE_NAME="ruoqi-sys-admin"
-          export VERSION="${{ steps.version.outputs.tag_full }}"
-
-          echo "执行命令: ./push.sh"
-          if ./push.sh; then
-            PUSH_STATUS="success"
-            echo "✅ 推送脚本执行成功"
-          else
-            PUSH_STATUS="failed"
-            echo "❌ 推送脚本执行失败"
-            exit 1
-          fi
-
-          # 记录结束时间
-          END_TIME=$(date +%s)
-          DURATION=$((END_TIME - START_TIME))
-
-          echo "推送耗时: ${DURATION}秒"
-          echo "push_status=${PUSH_STATUS}" >> $GITHUB_OUTPUT
-          echo "push_duration=${DURATION}" >> $GITHUB_OUTPUT
-
-      # 11. 输出镜像信息
-      - name: Output image information
-        run: |
-          echo "=== 镜像信息汇总 ==="
-          echo "🎉 Docker 镜像构建和推送完成！"
-          echo ""
-          echo "📦 镜像信息:"
-          echo "  - 镜像名称: ${{ secrets.DOCKER_HUB_USERNAME }}/ruoqi-sys-admin"
-          echo "  - 应用版本: v${{ steps.version.outputs.version }}"
-          echo "  - Git SHA: ${{ steps.version.outputs.sha_short }}"
-          echo "  - 构建日期: ${{ steps.version.outputs.date }}"
-          echo ""
-          echo "🏷️ 可用标签:"
-          echo "  - ${{ secrets.DOCKER_HUB_USERNAME }}/ruoqi-sys-admin:latest"
-          echo "  - ${{ secrets.DOCKER_HUB_USERNAME }}/ruoqi-sys-admin:${{ steps.version.outputs.tag_version }}"
-          echo "  - ${{ secrets.DOCKER_HUB_USERNAME }}/ruoqi-sys-admin:${{ steps.version.outputs.tag_date_version }}"
-          echo "  - ${{ secrets.DOCKER_HUB_USERNAME }}/ruoqi-sys-admin:${{ steps.version.outputs.tag_full }}"
-          echo ""
-          echo "⏱️ 构建统计:"
-          echo "  - 构建耗时: ${{ steps.build.outputs.build_duration }}秒"
-          echo "  - 推送耗时: ${{ steps.push.outputs.push_duration }}秒"
-
-      # 12. 上传构建日志
-      - name: Upload build logs
-        if: always()
-        uses: actions/upload-artifact@v4
-        with:
-          name: docker-build-logs
-          path: |
-            scripts/ruoqi-sys-admin-build/logs/
-            scripts/ruoqi-sys-admin-build/*.log
-          retention-days: 30
-
-      # 13. 清理 Docker 资源
-      - name: Cleanup Docker resources
-        if: always()
-        run: |
-          echo "=== 清理 Docker 资源 ==="
-
-          # 删除所有 ruoqi-sys-admin 相关的镜像
-          echo "删除本地镜像..."
-          docker images --format "{{.Repository}}:{{.Tag}}" | grep ruoqi-sys-admin | xargs -r docker rmi || true
-
-          # 清理构建缓存
-          echo "清理构建缓存..."
-          docker builder prune -f || true
-
-          # 清理无用的容器和网络
-          echo "清理无用资源..."
-          docker system prune -f --volumes || true
-
-          echo "✅ 资源清理完成"
-
-  # 14. 通知任务
   notification:
-    name: 📢 构建通知
+    if: startsWith(github.server_url, 'https://github.com')
     runs-on: ubuntu-latest
-    needs: [build_and_push]
-    if: always()
     steps:
-      - name: Determine notification status
-        id: status
-        run: |
-          if [ "${{ needs.build_and_push.result }}" = "success" ]; then
-            echo "status=✅ 成功" >> $GITHUB_OUTPUT
-            echo "color=good" >> $GITHUB_OUTPUT
-          elif [ "${{ needs.build_and_push.result }}" = "failure" ]; then
-            echo "status=❌ 失败" >> $GITHUB_OUTPUT
-            echo "color=danger" >> $GITHUB_OUTPUT
-          else
-            echo "status=⚠️  取消" >> $GITHUB_OUTPUT
-            echo "color=warning" >> $GITHUB_OUTPUT
-          fi
-
-      - name: Send summary notification
-        run: |
-          echo "=== 构建结果汇总 ==="
-          echo ""
-          echo "📋 项目: RuoQi 系统管理后台"
-          echo "📅 时间: $(date '+%Y-%m-%d %H:%M:%S')"
-          echo "📊 状态: ${{ steps.status.outputs.status }}"
-          echo ""
-          echo "🔗 相关信息:"
-          echo "  - 仓库: ${{ github.repository }}"
-          echo "  - 分支: ${{ github.ref_name }}"
-          echo "  - 提交: ${{ github.sha }}"
-          echo "  - 触发者: ${{ github.actor }}"
-          echo ""
-
-          if [ "${{ needs.build_and_push.result }}" = "success" ]; then
-            echo "🚀 构建成功！镜像已推送到 Docker Hub"
-            echo ""
-            echo "📦 镜像地址:"
-            echo "  docker pull ${{ secrets.DOCKER_HUB_USERNAME }}/ruoqi-sys-admin:${{ needs.build_and_push.outputs.tag_full }}"
-            echo ""
-            echo "🏷️ 可用标签:"
-            echo "  - latest"
-            echo "  - ${{ needs.build_and_push.outputs.tag_version }}"
-            echo "  - ${{ needs.build_and_push.outputs.tag_full }}"
-          fi
-
-          echo ""
-          echo "📎 详细日志:"
-          echo "  ${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }}"
+      - name: Pipeline status
+        run: echo "🍏 This job's status is ${{ job.status }}."
