--- a/.github/workflows/build-ruoqi-sys-admin-docker.yml
+++ b/.github/workflows/build-ruoqi-sys-admin-docker.yml
@@ -58,6 +58,10 @@ jobs:
         run: docker images
 
       - name: Push Docker image
+        env:
+          # 步骤级别的环境变量会传递给脚本
+          DOCKER_HUB_USERNAME: ${{ secrets.DOCKER_HUB_USERNAME }}
+          DOCKER_HUB_ACCESS_TOKEN: ${{ secrets.DOCKER_HUB_ACCESS_TOKEN }}
         run: |
           ./scripts/ruoqi-sys-admin/docker_push.sh
 
